# H2O-daily-trivia

./: .gitignore  CMakeLists.txt  README.md  main.cpp  trivia_questions.h  trivia_questions.hpp
src/: CMakeLists.txt  background.cpp  background.hpp  backgrounds_data.hpp  clock.cpp  clock.hpp  main.cpp  pimoroni_pico_import.cmake  theme.hpp  trivia_question.cpp  trivia_question.hpp  trivia_questions_data.hpp
src/assets_data/: backgrounds_data.hpp  themes_data.hpp  trivia_questions_data.hpp
src/assets_data/background_header_generator/: make_RGB332_background_header.py
src/background_header_generator/: make_RGB332_background_header.py
